--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,24 @@
 TO DO:
 
+- Disable the canvas except when the countdown timer is going.
+- Clear the canvas when #newRound is clicked.
 
-1. Convert canvas to jCanvas. Retain functionality with color changing.
-2. Align grid of the site according to wireframe. (Bootstrap, vanilla css, or maybe something lighter.)
+- Create an object, where the pokedex index is the key and the value is the name.
+	- Display this name when the pokemon is randomly selected.
+	
+- Create a firebase, plan out database format. (For saved drawings).
 
-- Obtain pictures of 150 pokemon.
-- Create a firebase, plan out database format. (For pokemon and saved drawings).
-- 
 
 BUGS: 
 
 DONE:
 
+- Convert canvas to jCanvas. Retain functionality with color changing.
+- Align grid of the site according to wireframe. (Bootstrap, vanilla css, or maybe something lighter.)
+- Obtain pictures of 150 pokemon.
+- FIXED Can't draw a single dot.
+- Build upon jQuery functionality. Make a button that shows a pokemon, starts a timer, and unlocks the canvas for 45 seconds.
+	- Create a function that randomly selects a file 001-150.png;
+	- Create a timer that begins at 45 and a function to count it down to 0;
+	- Create a button which shows a random image, clears the canvas, and begins the timer.
+		- Deactivate the button for 25 seconds.
