--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,10 @@
 TO DO:
 
-- Disable the canvas except when the countdown timer is going.
-- Clear the canvas when #newRound is clicked.
+- Design a header which fills from the right with pictures. On the left, the pokedraw logo.
+- Write a function which updates the header with the most recent pokedraws from getRecentDrawings()
 
-- Create an object, where the pokedex index is the key and the value is the name.
-	- Display this name when the pokemon is randomly selected.
-	
-- Create a firebase, plan out database format. (For saved drawings).
+
+- Create a firebase, plan out database format. (For saved drawings, likes, etc).
 
 
 BUGS: 
@@ -22,3 +20,9 @@ DONE:
 	- Create a timer that begins at 45 and a function to count it down to 0;
 	- Create a button which shows a random image, clears the canvas, and begins the timer.
 		- Deactivate the button for 25 seconds.
+- Disable the canvas except when the countdown timer is going.
+- Clear the canvas when #newRound is clicked.
+- Create an object, where the pokedex index is the key and the value is the name.
+	- Display this name when the pokemon is randomly selected.
+- Save images to the server immediately once the timer runs out.
+- Write a function which gets a list of the X most recent images.
