--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,12 @@
 TO DO:
 
-
-- Implement Facebook share button, and a save button.
+- Create a gallery page where you can see all drawings.
 
 - Create a firebase, plan out database format. (For saved drawings, likes, etc).
 
 
 BUGS: 
+
 
 DONE:
 
@@ -27,3 +27,4 @@ DONE:
 - Write a function which gets a list of the X most recent images.
 - Write a function which updates the header with the most recent pokedraws from getRecentDrawings()
 - Design a header which fills from the right with pictures. On the left, the pokedraw logo.
+- Implement Facebook share button, and a save button.
